feat(js): add game function and result

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -3,3 +3,11 @@ body {
     color: antiquewhite;
 }
 
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 80vh;
+    width: 100%;
+}
